# Mini_Viewer

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE_CHECKLIST.md  data_loader.py  env.yml  pyproject.toml  requirements.txt  run_viewer.py
.github/workflows/: ci.yml
.mini_viewer_unified_files_backup_20260424_105033/: README.md  README_patch.md  environment-mini-viewer-full.yml  pyproject.toml  requirements-common.txt  requirements-cpu.txt  requirements-cuda124.txt  requirements-language.txt  requirements.txt
.mini_viewer_unified_files_backup_20260424_105033/docs/: ENVIRONMENT.md
.tmp/: camera_state.json
actions/: base.py  camera_path.py  language_feature.py
core/: renderer.py  splat.py  viewer.py
docs/bboxes/: demo.txt
models/: clip_query.py
scripts/: download_dino.py  download_siglip2.py  render_camera_path.py  smoke_test_loaders.py  validate_release.py
tests/: test_static_release.py
utils/: __init__.py  color_shs.py  geometry_fns.py  ply_to_ckpt.py
viser_bbox/: .gitignore  README.md  pyproject.toml
viser_bbox/src/viser_bbox/: __init__.py  constants.py  geometry.py  ply_io.py  script_parser.py  vis.py
