[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "viser_bbox"
version = "0.0.0"
description = "Utilities and demo for Viser bounding boxes"
readme = "README.md"
requires-python = ">=3.8"
authors = [ { name = "delyan" } ]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]

dependencies = [
  "numpy>=1.21",
  "plyfile>=0.7",
  "viser",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["viser_bbox*"]
